# Hybrid-Northstar

./: .gitignore  README.md  pyproject.toml
artifacts/: ranker_eval.json
artifacts/northstar-dom-lora/: README.md  adapter_config.json  adapter_model.safetensors  log_history.json  train_metrics.json
artifacts/ranker_distilbert/: metrics.json  model.safetensors
artifacts/reports/local_test/: report.md  summary.json
artifacts/reports/northstar_compare_25/: report.md  summary.json
artifacts/reports/ranker_gpu/: report.md  summary.json
examples/: kernel_tasks.example.json
kernel-harness/: .env.example  .gitignore  README.md  package-lock.json  package.json
kernel-harness/docs/: harness-design.md  kernel-deployment.md  model-adapters.md  safety-policy.md
kernel-harness/scripts/: run-comparison.ts  run-live-northstar.ts  run-task.ts
kernel-harness/src/: runner.ts  types.ts
kernel-harness/src/agents/: index.ts
kernel-harness/src/evaluation/: scorer.ts
kernel-harness/src/kernel/: session-manager.ts
kernel-harness/src/live/: northstar-kernel-runner.ts
kernel-harness/src/safety/: guardrails.ts
kernel-harness/src/tasks/: registry.ts
kernel-harness/tests/unit/: guardrails.test.ts  scorer.test.ts
src/domstar/: __init__.py
src/domstar/checks/: smoke_test.py
src/domstar/data/: mind2web.py
src/domstar/dom/: __init__.py  candidates.py  schema.py
src/domstar/eval/: evaluate_northstar.py  evaluate_ranker.py
src/domstar/finetune/: __init__.py  prompting.py  train.py
src/domstar/kernel/: __init__.py  compare_kernel_models.py  run_kernel_task.py  (+1 more)
(+14 files in other folders)
